--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "i": "^0.3.6",
     "mongoose": "^5.9.28",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "tar": "^6.0.5"
   }
 }
